Fixed h2 title text aligns in css and changed all titles to be nested in same div classes in index.html

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ img:hover {
   padding-top: 100px;
   padding-bottom: 80px;
 }
-#service h2 {
+.container .row .col-md-12.col-sm-12 h2 {
   border-left: 2px solid #f2af00;
   display: inline-block;
   padding: 20px;
@@ -179,15 +179,6 @@ img:hover {
   padding-top: 60px;
   padding-bottom: 80px;
 }
-#about h2 {
-  border-right: 2px solid #f2af00;
-  display: inline-block;
-  padding: 10px 20px 10px 10px;
-}
-#about .col-md-12 {
-  text-align: center;
-  padding-bottom: 60px;
-}
 #about img {
   border: 1px solid #666;
   padding: 10px;
@@ -195,18 +186,8 @@ img:hover {
 #about h4 {
   padding-bottom: 10px;
 }
-
-#testimonials h2 {
-  border-left: 2px solid #f2af00;
-  display: inline-block;
-  padding: 10px 10px 10px 20px;
-}
 #testimonials h4 {
 	padding-bottom: 40px;
-}
-#testimonials .col-md-12 {
-  text-align: center;
-  padding-bottom: 60px;
 }
 #testimonials img {
   border: 1px solid #666;
@@ -215,15 +196,9 @@ img:hover {
 
 /* portfolio section */
 #portfolio {
-  text-align: center;
   padding-top: 80px;
   padding-bottom: 60px;
   }
-#portfolio h2 {
-  border-right: 2px solid #f2af00;
-  display: inline-block;
-  padding: 10px 20px 10px 10px;
-}
 /* FILTER CSS */
 .filter-wrapper {
     width: 100%;
@@ -294,12 +269,9 @@ img:hover {
 #pricing {
   padding-top: 60px;
   padding-bottom: 80px;
-  text-align: center;
 }
-#pricing h2 {
-  border-left: 2px solid #f2af00;
-  display: inline-block;
-  padding: 10px 10px 10px 20px;
+#pricing .col-md-4.col-sm-6 {
+  text-align: center;
 }
 #pricing .plan {
   border: 2px solid #444;
@@ -344,13 +316,6 @@ img:hover {
 #contact {
   padding-top: 60px;
   padding-bottom: 60px;
-  text-align: center;
-}
-#contact h2 {
-  border-right: 2px solid #f2af00;
-  display: inline-block;
-  padding: 10px 20px 10px 10px;
-  margin-bottom: 60px;
 }
 #contact .form-control {
   border: 2px solid #444;
